1. Small fixes so loading message has enough padding on Safari. 2. Change Trio image from SVG to a .png file so that it renders correctly on Safari.

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -508,6 +508,7 @@ section {
     text-align: center;
     margin-top: 0px !important;
     display:none;
+    margin-bottom: 10px !important;
 }
 
 .variant-card #bam-track .loader {
